'Features: Filters Screen'

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -6,5 +6,13 @@
   "shortDesc": "краткое описание",
   "fav": "Избранное",
   "seen": "Посетил",
-  "wannaSee": "Хочу посетить"
+  "wannaSee": "Хочу посетить",
+  "clear": "Очистить",
+  "categories": "КАТЕГОРИИ",
+  "show": "ПОКАЗАТЬ",
+  "distance": "Расстояние",
+  "from": "от",
+  "to": "до",
+  "metres": "м",
+  "km": "км"
 }
