'Features: dark theme switcher'

--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -14,5 +14,8 @@
   "from": "от",
   "to": "до",
   "metres": "м",
-  "km": "км"
+  "km": "км",
+  "darkTheme": "Тёмная тема",
+  "watchTutorial": "Смотреть туториал",
+  "settings": "Настройки"
 }
